# api/api.gen.go
@@ -2,7 +2,7 @@
 
 // Package api provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.1 DO NOT EDIT.
 package api
 
 import (
@@ -25,11 +25,29 @@ type Artifact struct {
 
 	// DisplayName The name of the artifact in the desired format to be displayed on the web or referenced in communication
 	DisplayName   *string             `json:"displayName,omitempty"`
-	GitRepository *string             `json:"gitRepository,omitempty"`
+	GitRepository *[]string           `json:"gitRepository,omitempty"`
 	Issues        *string             `json:"issues,omitempty"`
 	Tags          map[string][]string `json:"tags"`
 	Type          string              `json:"type"`
 	Website       *string             `json:"website,omitempty"`
+}
+
+// ArtifactRegistration defines model for ArtifactRegistration.
+type ArtifactRegistration struct {
+	// ArtifactId The maven style artifact id
+	ArtifactId string `json:"artifactId"`
+
+	// DisplayName The name of the artifact in the desired format to be displayed on the web or referenced in communication
+	DisplayName string `json:"displayName"`
+
+	// GitRepository An array of git repository URLs
+	GitRepository []string `json:"gitRepository"`
+
+	// Issues The issues/tracker URL (optional)
+	Issues *string `json:"issues,omitempty"`
+
+	// Website The website URL (optional)
+	Website *string `json:"website,omitempty"`
 }
 
 // Asset defines model for Asset.
@@ -105,6 +123,9 @@ type GetVersionsParams struct {
 // RegisterGroupJSONRequestBody defines body for RegisterGroup for application/json ContentType.
 type RegisterGroupJSONRequestBody = Group
 
+// RegisterArtifactJSONRequestBody defines body for RegisterArtifact for application/json ContentType.
+type RegisterArtifactJSONRequestBody = ArtifactRegistration
+
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
 
@@ -119,6 +140,9 @@ type ServerInterface interface {
 
 	// (GET /groups/{groupID}/artifacts)
 	GetArtifacts(w http.ResponseWriter, r *http.Request, groupID GroupID)
+
+	// (POST /groups/{groupID}/artifacts)
+	RegisterArtifact(w http.ResponseWriter, r *http.Request, groupID GroupID)
 
 	// (GET /groups/{groupID}/artifacts/{artifactID})
 	GetArtifact(w http.ResponseWriter, r *http.Request, groupID GroupID, artifactID ArtifactID)
@@ -208,6 +232,31 @@ func (siw *ServerInterfaceWrapper) GetArtifacts(w http.ResponseWriter, r *http.R
 
 	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.GetArtifacts(w, r, groupID)
+	}))
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r)
+}
+
+// RegisterArtifact operation middleware
+func (siw *ServerInterfaceWrapper) RegisterArtifact(w http.ResponseWriter, r *http.Request) {
+
+	var err error
+
+	// ------------- Path parameter "groupID" -------------
+	var groupID GroupID
+
+	err = runtime.BindStyledParameterWithOptions("simple", "groupID", r.PathValue("groupID"), &groupID, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "groupID", Err: err})
+		return
+	}
+
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.RegisterArtifact(w, r, groupID)
 	}))
 
 	for _, middleware := range siw.HandlerMiddlewares {
@@ -487,6 +536,7 @@ func HandlerWithOptions(si ServerInterface, options StdHTTPServerOptions) http.H
 	m.HandleFunc("POST "+options.BaseURL+"/groups", wrapper.RegisterGroup)
 	m.HandleFunc("GET "+options.BaseURL+"/groups/{groupID}", wrapper.GetGroup)
 	m.HandleFunc("GET "+options.BaseURL+"/groups/{groupID}/artifacts", wrapper.GetArtifacts)
+	m.HandleFunc("POST "+options.BaseURL+"/groups/{groupID}/artifacts", wrapper.RegisterArtifact)
 	m.HandleFunc("GET "+options.BaseURL+"/groups/{groupID}/artifacts/{artifactID}", wrapper.GetArtifact)
 	m.HandleFunc("GET "+options.BaseURL+"/groups/{groupID}/artifacts/{artifactID}/versions", wrapper.GetVersions)
 	m.HandleFunc("GET "+options.BaseURL+"/groups/{groupID}/artifacts/{artifactID}/versions/{versionID}", wrapper.GetVersionInfo)
@@ -557,6 +607,24 @@ type GetArtifacts200JSONResponse GroupArtifacts
 func (response GetArtifacts200JSONResponse) VisitGetArtifactsResponse(w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(200)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type RegisterArtifactRequestObject struct {
+	GroupID GroupID `json:"groupID"`
+	Body    *RegisterArtifactJSONRequestBody
+}
+
+type RegisterArtifactResponseObject interface {
+	VisitRegisterArtifactResponse(w http.ResponseWriter) error
+}
+
+type RegisterArtifact201JSONResponse Artifact
+
+func (response RegisterArtifact201JSONResponse) VisitRegisterArtifactResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(201)
 
 	return json.NewEncoder(w).Encode(response)
 }
@@ -653,6 +721,9 @@ type StrictServerInterface interface {
 
 	// (GET /groups/{groupID}/artifacts)
 	GetArtifacts(ctx context.Context, request GetArtifactsRequestObject) (GetArtifactsResponseObject, error)
+
+	// (POST /groups/{groupID}/artifacts)
+	RegisterArtifact(ctx context.Context, request RegisterArtifactRequestObject) (RegisterArtifactResponseObject, error)
 
 	// (GET /groups/{groupID}/artifacts/{artifactID})
 	GetArtifact(ctx context.Context, request GetArtifactRequestObject) (GetArtifactResponseObject, error)
@@ -793,6 +864,39 @@ func (sh *strictHandler) GetArtifacts(w http.ResponseWriter, r *http.Request, gr
 		sh.options.ResponseErrorHandlerFunc(w, r, err)
 	} else if validResponse, ok := response.(GetArtifactsResponseObject); ok {
 		if err := validResponse.VisitGetArtifactsResponse(w); err != nil {
+			sh.options.ResponseErrorHandlerFunc(w, r, err)
+		}
+	} else if response != nil {
+		sh.options.ResponseErrorHandlerFunc(w, r, fmt.Errorf("unexpected response type: %T", response))
+	}
+}
+
+// RegisterArtifact operation middleware
+func (sh *strictHandler) RegisterArtifact(w http.ResponseWriter, r *http.Request, groupID GroupID) {
+	var request RegisterArtifactRequestObject
+
+	request.GroupID = groupID
+
+	var body RegisterArtifactJSONRequestBody
+	if err := json.NewDecoder(r.Body).Decode(&body); err != nil {
+		sh.options.RequestErrorHandlerFunc(w, r, fmt.Errorf("can't decode JSON body: %w", err))
+		return
+	}
+	request.Body = &body
+
+	handler := func(ctx context.Context, w http.ResponseWriter, r *http.Request, request interface{}) (interface{}, error) {
+		return sh.ssi.RegisterArtifact(ctx, request.(RegisterArtifactRequestObject))
+	}
+	for _, middleware := range sh.middlewares {
+		handler = middleware(handler, "RegisterArtifact")
+	}
+
+	response, err := handler(r.Context(), w, r, request)
+
+	if err != nil {
+		sh.options.ResponseErrorHandlerFunc(w, r, err)
+	} else if validResponse, ok := response.(RegisterArtifactResponseObject); ok {
+		if err := validResponse.VisitRegisterArtifactResponse(w); err != nil {
 			sh.options.ResponseErrorHandlerFunc(w, r, err)
 		}
 	} else if response != nil {
